--- a/templates/layout.html
+++ b/templates/layout.html
@@ -62,15 +62,16 @@
 
           </div>
       </nav>
-    {% block content%}
-    {% endblock %}
+      
+        {% block content%}{% endblock %} 
+        
     <!-- Footer -->
-    <footer id="footer" class="bg-dark">
+    <footer id="footer" class="bg-dark footer">
         <div class="container py-3">
             <div class="row">
                 <div class="col text-center">
                     <h4 class="jg">Made with love by</h4>
-                    <a href=""><img src="{% static "img/jg.svg" %}"></a>
+                    <a href="http://www.jgdezigns.com" target="_blank"><img src="{% static "img/logo.svg" %}"></a>
                 </div>
             </div>
         </div>
