--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
                     </div>
                     <!-- Card Footer -->
                     <div class="card-footer" style="background: inherit; border-color: inherit;">
-                    <a href="https://youtu.be/dWqrez4P83I" class="btn btn-outline-primary">Check out my story</a>
+                    <a href="https://youtu.be/dWqrez4P83I" target="_blank" class="btn btn-outline-primary">Check out my story</a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 </div>
                 <!-- Card Footer -->
                 <div class="card-footer" style="background: inherit; border-color: inherit;">
-                    <a href="https://youtu.be/dWqrez4P83I" class="btn btn-outline-primary">Check out my story</a>
+                    <a href="https://youtu.be/dWqrez4P83I" target="_blank" class="btn btn-outline-primary">Check out my story</a>
                 </div>
                 </div>
             </div>
@@ -87,11 +87,10 @@
                     <p class="card-text">Alls I gots ta say is <strong>I didn't choose the ninja life. The ninja life choose me! </strong> </p>
 
                     <p class="card-text">With out The Miranda Life I never would have gotten the gordida pose down</p>
-                    <p class="card-text">Thanks Miranda Life</p>
                     </div>
                     <!-- Card Footer -->
                     <div class="card-footer" style="background: inherit; border-color: inherit;">
-                        <a href="https://www.youtube.com/watch?v=e3n7ydQt140" class="btn btn-outline-primary">Check out my story</a>
+                        <a href="https://www.youtube.com/watch?v=e3n7ydQt140" target="_blank" class="btn btn-outline-primary">Check out my story</a>
                     </div>
                 </div>
             </div>
@@ -99,67 +98,80 @@
     </div>
 </section>
 <!-- About -->
-<section id="about-section" class="bg-light text-muted">
+<section id="about-section" class="bg-white text-muted">
     <div class="container">
         <div class="row">
             <div class="col text-center">
-                    <div class="p-5">
-                        <h1 class="section-title pb-4">The Real</h1>
-                        <p class="lead">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum inventore sunt cumque omnis itaque corrupti, dolores ab delectus beatae excepturi.
-                        </p>
-                        <a href="" class="btn btn-outline-primary">Going Dutch</a>
-                    </div>
-                </div>
+                <div class="p-5">
+                    <h1 class="section-title pb-4">The Real</h1>
+                </div>       
+            </div>
+        </div> 
+        <div class="row">
+            <div class="col-md-6">
+                <p class="lead">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum inventore sunt cumque omnis itaque corrupti, dolores ab delectus beatae excepturi.
+                    </p>
+            </div>
+            <div class="col-md-6">
+                <img src="{% static "img/jackie.png" alt="jackie why" %}" alt="" class="img-fluid">
+            </div>
         </div>
     </div>
 </section>
 <!-- Contact -->
 <section id="contact-section" class="bg-primary bgblue">
-        <div class="container">
-            <div class="row">
-                <div class="col text-center">
-                        <div class="p-5">
-                            <h1 class="section-title pb-4">Get at Me</h1>
-                            <p class="lead">
-                                Not happy with your experience?  The Mrianada Life got you down?  Don't worry, we understand the struggle just hit that nifty little button below.
-                            </p>
-                            <p>But if you start crying on me......Your on your own!</p>
-                            <!-- Contact Modal -->
-                            <div class="modal animated bounceInUp text-dark" id="contactModal">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="contactModalTitle">
-                                        Contact Us
-                                        </h5>
-                                    </div>
-                                    <div class="modal-body">
-                                        <form>
-                                        <div class="form-group">
-                                            <label for="name">Name</label>
-                                            <input type="text" class="form-control">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="email">Email</label>
-                                            <input type="email" class="form-control">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="message">Message</label>
-                                            <textarea class="form-control"></textarea>
-                                        </div>
-                                        </form>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button class="btn btn-primary btn-block">Submit</button>
-                                    </div>
-                                    </div>
-                                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col text-center">
+                <div class="p-5">
+                    <h1 class="section-title pb-4">Get at Me</h1>
+                </div>       
+            </div>
+        </div> 
+        <div class="row">
+            <div class="col-md-6">
+                <img src="{% static "img/con.png" alt="contact" %}" alt="" class="img-fluid">
+            </div>
+            <div class="col-md-6">
+                    <p class="lead">
+                        Not happy with your experience?  The Mrianada Life got you down?  Don't worry, we understand the struggle just hit that nifty little button below.
+                    </p>
+                    <p>But if you start crying on me......Your on your own!</p>
+                <!-- Contact Modal -->
+                <div class="modal animated bounceInUp text-dark" id="contactModal">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="contactModalTitle">
+                                Contact Us
+                                </h5>
                             </div>
-                            <button class="btn btn-outline-light" data-toggle="modal" data-target="#contactModal">Chit Chat</button>
+                            <div class="modal-body">
+                                <form>
+                                <div class="form-group">
+                                    <label for="name">Name</label>
+                                    <input type="text" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email</label>
+                                    <input type="email" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">Message</label>
+                                    <textarea class="form-control"></textarea>
+                                </div>
+                                </form>
+                            </div>
+                            <div class="modal-footer">
+                                <button class="btn btn-primary btn-block">Submit</button>
+                            </div>
+                            </div>
                         </div>
                     </div>
+                <button class="btn btn-outline-light text-center" data-toggle="modal" data-target="#contactModal">Chit Chat</button>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 {% endblock %}
