Dashboard place holder and login redirect to dashboard set

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     </div>
 </header>
 <!-- Testamonials -->
-<section id="test-section">
+<section id="test-section" class="bg-dark">
     <div class="container">
         <div class="row">
             <div class="col text-center">
@@ -130,14 +130,15 @@
             </div>
         </div> 
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 order-1 order-md-12">
                 <img src="{% static "img/con.png" alt="contact" %}" alt="" class="img-fluid">
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 order-12 order-md-1">
                     <p class="lead">
                         Not happy with your experience?  The Mrianada Life got you down?  Don't worry, we understand the struggle just hit that nifty little button below.
                     </p>
                     <p>But if you start crying on me......Your on your own!</p>
+                    
                 <!-- Contact Modal -->
                 <div class="modal animated bounceInUp text-dark" id="contactModal">
                         <div class="modal-dialog">
