--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,9 +3,18 @@
 /*primary-color: #008ed6*/
 
 /* Global */
+html {
+    position: relative;
+    min-height: 100%;
+}
+
 body{
     background: #333;
     color: #fff;
+}
+
+.content-container{
+    padding-top: 60px;
 }
 
 /* Navigation */
@@ -38,7 +47,7 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 700px;
+    min-height: 760px;
 }
 
 .home-inner{
@@ -116,6 +125,15 @@ body{
 
 
 /* Footer */
+
+.footer {
+position: absolute;
+bottom: 0;
+width: 100%;
+line-height: 60px; /* Vertically center the text there */
+background-color: #f5f5f5;
+}
+
 .jg{
     font-weight: 100;
 }
