--- a/templates/layout.html
+++ b/templates/layout.html
@@ -52,18 +52,24 @@
                   </form> -->
 
                 <!-- Button trigger login modal -->
-                <button type="button" class="btn btn-outline-primary ml-auto" data-toggle="modal" data-target="#loginModal">
-                        LOGIN
-                </button>
-                <button type="button" class="btn btn-outline-secondary ml-1" data-toggle="modal" data-target="#exampleModal">
-                        REGISTER
-                </button>
+                {% if not user.is_authenticated %}
+                    <button type="button" class="btn btn-outline-primary ml-auto" data-toggle="modal" data-target="#loginModal">
+                            LOGIN
+                    </button>
+                    <!-- Register -->
+                    <button type="button" class="btn btn-outline-secondary ml-1" data-toggle="modal" data-target="#exampleModal">
+                            REGISTER
+                    </button>
+                {% else %}
+                    <a href="" class="ml-auto nav-item text-muted">RECORD</a>
+                {% endif %}
               </div>
 
           </div>
       </nav>
-      
-        {% block content%}{% endblock %} 
+      <div class="content-container">
+            {% block content%}{% endblock %}             
+      </div>
         
     <!-- Footer -->
     <footer id="footer" class="bg-dark footer">
@@ -94,15 +100,21 @@
                 </div>
                 <div class="modal-body">
                     <!-- Login Form -->
-                    <form class="">
+                    <form class="" method='POST' action='{% url "users:dashboard" %}'>
+                        {%csrf_token %}
                         <div class="form-group">
-                            <input type="email" class="form-control" id="loginEmail" aria-describedby="emailHelp" placeholder="Enter email">                            
+                            <input type="email" name="username"  class="form-control" id="loginEmail" aria-describedby="emailHelp" placeholder="Enter email">                            
                         </div>
                         <div class="form-group mx-sm-1">
-                            <input type="password" class="form-control" id="loginPassword1" placeholder="Password">
+                            <input type="password" name="password"  class="form-control" id="loginPassword1" placeholder="Password">
                         </div>
                         <button class="btn btn-outline-primary" type="submit">LOGIN</button>
                     </form>
+                    <!-- <form action="" method="POST">
+                        {{ form.as_p }}
+                        {% csrf_token %}
+                        <input type="submit" value="LOGIN" class="btn btn-primary">
+                    </form> -->
                 </div>
             </div>
         </div>
