Logout view, form, and template created and working

--- a/templates/index.html
+++ b/templates/index.html
@@ -130,10 +130,10 @@
             </div>
         </div> 
         <div class="row">
-            <div class="col-md-6 order-1 order-md-12">
+            <div class="col-md-6">
                 <img src="{% static "img/con.png" alt="contact" %}" alt="" class="img-fluid">
             </div>
-            <div class="col-md-6 order-12 order-md-1">
+            <div class="col-md-6">
                     <p class="lead">
                         Not happy with your experience?  The Mrianada Life got you down?  Don't worry, we understand the struggle just hit that nifty little button below.
                     </p>
