register, login, logout are fully functional

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -57,11 +57,9 @@
                             LOGIN
                     </button>
                     <!-- Register -->
-                    <button type="button" class="btn btn-outline-secondary ml-1" data-toggle="modal" data-target="#exampleModal">
-                            REGISTER
-                    </button>
-                    
+                    <a href="{% url 'users:signup' %}" class="btn btn-outline-secondary ml-1">REGISTER</a>
                 {% else %}
+                    <!-- Options for logged in users -->
                     <a href="" class="ml-auto nav-item text-muted">RECORD</a>
                     <a href="{% url 'users:logout' %}" class="ml-3 nav-item text-muted">LOGOUT</a>
                 {% endif %}
