--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -1,9 +1,12 @@
 {% extends "layout.html" %}
 
+{% load timesheet_tags %}
+
 {% block title %} Dashboard | {{ block.super }} {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container py-5">
         <h1>Dashboard</h1>
+        {% earnings_form %}
     </div>
 {% endblock %}
