--- a/templates/layout.html
+++ b/templates/layout.html
@@ -60,7 +60,7 @@
                     <a href="{% url 'users:signup' %}" class="btn btn-outline-secondary ml-1">REGISTER</a>
                 {% else %}
                     <!-- Options for logged in users -->
-                    <a href="" class="ml-auto nav-item text-muted">RECORD</a>
+                    <a href="{% url 'users:dashboard' %}" class="ml-auto nav-item text-muted">DASHBOARD</a>
                     <a href="{% url 'users:logout' %}" class="ml-3 nav-item text-muted">LOGOUT</a>
                 {% endif %}
               </div>
