--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -6,7 +6,18 @@
 
 {% block content %}
     <div class="container py-5">
-        <h1>Dashboard</h1>
-        {% earnings_form %}
+        <div class="row">
+            <div class="col-md-6">
+                <h2>For the Week</h2>
+                <ul>
+                    {% for day in user.earnings.all %}
+                    <li>{{ day.get_day_display }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            <div class="col-md-6">
+                {% earnings_form %}
+            </div>
+        </div>
     </div>
 {% endblock %}
