--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,8 @@ html {
 body{
     background: #333;
     color: #fff;
+    font-weight: light;
+    margin-bottom: 150px;
 }
 
 .content-container{
@@ -129,8 +131,8 @@ body{
 .footer {
 position: absolute;
 bottom: 0;
+height: 150px;
 width: 100%;
-line-height: 60px; /* Vertically center the text there */
 background-color: #f5f5f5;
 }
 
