--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
   </head>
   <body id="home">
       <!--Navigation-->
-      <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top justify-content-between">
+      <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top justify-content-between font-weight-light">
           <div class="container">
               <!-- Company Logo -->
               <a href="" class="navbar-brand"><img src="{% static "img/shake.png" alt="Miranda Life Image" %}" class="img-fluid rounded mx-auto d-block mb-2"/></a>
@@ -34,19 +34,23 @@
                     <a href="{% url 'users:signup' %}" class="btn btn-outline-secondary ml-1">REGISTER</a>
                 {% else %}
                     <!-- Options for logged in users -->
-                    <a href="{% url 'users:dashboard' %}" class="ml-auto nav-item text-muted">DASHBOARD</a>
+                    <a href="{% url 'home' %}" class="ml-auto nav-item text-muted">HOME</a>
+                    <a href="{% url 'users:dashboard' %}" class="ml-3 nav-item text-muted">DASHBOARD</a>
+                    <a href="{% url 'users:record' %}" class="ml-3 nav-item text-muted">YOUR MONEY</a>
                     <a href="{% url 'users:logout' %}" class="ml-3 nav-item text-muted">LOGOUT</a>
                 {% endif %}
               </div>
 
           </div>
       </nav>
+
+      <!-- Block for generated content -->
       <div class="content-container">
             {% block content%}{% endblock %}             
       </div>
         
     <!-- Footer -->
-    <footer id="footer" class="bg-dark footer">
+    <footer id="footer" class="bg-dark">
         <div class="container py-3">
             <div class="row">
                 <div class="col text-center">
