--- a/users/templates/users/dashboard.html
+++ b/users/templates/users/dashboard.html
@@ -1,49 +1,15 @@
 {% extends "layout.html" %}
-{% load static from staticfiles %}
+{% load bootstrap4 %}
 
-{% load timesheet_tags %}
-
-{% block title %} Dashboard | {{ block.super }} {% endblock %}
+{% block title %}Sign Up | {{ block.super }}{% endblock %}
 
 {% block content %}
-    <div class="container py-5">
+<div class="container py-3">
         <div class="row">
             <div class="col-md-6">
-                {% earnings_form %}
-            </div>
-            <div class="col-md-6">
-                <h2 class="font-weight-light">For the week</h2>
-                <!-- Displays total for the week -->
-                {% weekly_total as weekly_total %}
-                <p>{{ weekly_total }}</p>
-                <!-- Displays each recorded day for user -->
-                <div class="list-group">
-                    {% for day in user.earnings.all %}
-                    <div class="list-group-item alert-secondary">
-                        <!-- Displays the day -->
-                        <h5 class="mb-1 text-primary">
-                            {{ day.get_day_display }}
-                        <!-- Displays the date recorded -->
-                        <small><time class="pull-right small" datetime="{{ day.recorded_at }}">{{ day.recorded_at|date:"SHORT_DATE_FORMAT" }}</time></small>
-                        </h5>
-                        <!-- Notes for the day -->
-                        <span class="text-secondary">
-                            <small>
-                            {% if day.notes %}
-                                {{ day.notes|linebreaks }}
-                            {% endif %}
-                            </small>
-                        </span>
-                        <!-- What they made -->
-                        <span class="">{{ day.made|linebreaks }}</span>
-                    </div>
-                    {% endfor %}
-                </div>
+                <h1>Dashboard</h1>
+
             </div>
         </div>
     </div>
-{% endblock %}
-
-{% block js %}
-    <script src="{% static 'js/stretchy.js' %}" async></script>
 {% endblock %}
